--- a/calculadora.html
+++ b/calculadora.html
@@ -238,7 +238,7 @@ th{background:#f1f1f1}
 
 <hr>
 <div class="form-check"><input class="form-check-input item" id="turbo" data-nome="Turbo" data-valor="50000" type="checkbox"> Turbo</div>
-<input class="form-check-input item" id="fulltunagem" data-nome="Full Turnagem" data-valor="350000" type="checkbox">
+<div class="form-check"><input class="form-check-input item" data-nome="fulltunagem" data-valor="500000" type="checkbox">Full Turnagem</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="500000" type="checkbox"> Blindagem</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Blindagem Pneus" data-valor="1000000" type="checkbox"> Blindagem Pneus</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Blindagem Full" data-valor="1500000" type="checkbox"> Blindagem Full</div>
@@ -450,6 +450,7 @@ if (isMobile) {
 
 </body>
 </html>
+
 
 
 
