--- a/pagamento.html
+++ b/pagamento.html
@@ -243,7 +243,7 @@ function gerarRelatorio(){
   const idMes = `${id}-${mes}`;
 
   let texto = `════════════════════════════════\n`;
-  texto += `🛠️ **Central Race – PAGAMENTO SEMANAL** 🛠️\n`;
+  texto += `🛠️ **Deboxe Customs – PAGAMENTO SEMANAL** 🛠️\n`;
   texto += `════════════════════════════════\n\n`;
   texto += `👤 **Funcionário:** ${nome} (ID: ${idMes})\n`;
   texto += `🏷️ **Cargo:** ${cargo}\n`;
@@ -287,3 +287,4 @@ function limpar(){
 
 </body>
 </html>
+
