--- a/index.html
+++ b/index.html
@@ -304,9 +304,67 @@ document.addEventListener("keydown", function(e){
 
 document.getElementById("year").textContent = new Date().getFullYear();
 </script>
+<!-- 🔒 PROTEÇÕES -->
+<script>
+// Bloqueio de menu de contexto e arrastar imagens
+document.addEventListener("contextmenu", e => e.preventDefault());
+document.addEventListener("dragstart", e => e.preventDefault());
 
+// Bloqueio de teclas de desenvolvedor
+document.addEventListener("keydown", function(e){
+  // F12, Ctrl+Shift+I/J/C, Ctrl+U
+  if(
+    e.key === "F12" ||
+    (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) ||
+    (e.ctrlKey && e.key.toLowerCase() === "u")
+  ){
+    e.preventDefault();
+    console.log("Ação de desenvolvedor detectada!");
+  }
+});
+
+// Detecção de DevTools baseada em tamanho da janela
+(function(){
+  const limite = 160; // pixels considerados suspeitos
+  setInterval(() => {
+    if(
+      window.outerWidth - window.innerWidth > limite ||
+      window.outerHeight - window.innerHeight > limite
+    ){
+      // Exibe um overlay de aviso, sem apagar a página
+      if(!document.getElementById("devtools-warning")){
+        const div = document.createElement("div");
+        div.id = "devtools-warning";
+        div.style.position = "fixed";
+        div.style.top = "0";
+        div.style.left = "0";
+        div.style.width = "100%";
+        div.style.height = "100vh";
+        div.style.backgroundColor = "rgba(0,0,0,0.9)";
+        div.style.color = "red";
+        div.style.display = "flex";
+        div.style.alignItems = "center";
+        div.style.justifyContent = "center";
+        div.style.fontSize = "22px";
+        div.style.zIndex = "9999";
+        div.style.textAlign = "center";
+        div.innerHTML = "🚫 Acesso suspeito detectado – DevTools aberto";
+        document.body.appendChild(div);
+      }
+    } else {
+      // Remove overlay se DevTools fechado
+      const warn = document.getElementById("devtools-warning");
+      if(warn) warn.remove();
+    }
+  }, 500);
+})();
+
+// Atualiza o ano automaticamente
+document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
