--- a/index.html
+++ b/index.html
@@ -304,67 +304,100 @@ document.addEventListener("keydown", function(e){
 
 document.getElementById("year").textContent = new Date().getFullYear();
 </script>
-<!-- 🔒 PROTEÇÕES -->
 <script>
-// Bloqueio de menu de contexto e arrastar imagens
+/* =========================
+   🔒 PROTEÇÃO AVANÇADA
+========================= */
+
+// ❌ Clique direito
 document.addEventListener("contextmenu", e => e.preventDefault());
+
+// ❌ Arrastar elementos/imagens
 document.addEventListener("dragstart", e => e.preventDefault());
 
-// Bloqueio de teclas de desenvolvedor
+// ❌ Atalhos comuns de DevTools
 document.addEventListener("keydown", function(e){
-  // F12, Ctrl+Shift+I/J/C, Ctrl+U
-  if(
+  if (
     e.key === "F12" ||
     (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) ||
     (e.ctrlKey && e.key.toLowerCase() === "u")
-  ){
+  ) {
     e.preventDefault();
-    console.log("Ação de desenvolvedor detectada!");
+    e.stopPropagation();
   }
 });
 
-// Detecção de DevTools baseada em tamanho da janela
+// 🔍 Detectar DevTools por dimensão
 (function(){
-  const limite = 160; // pixels considerados suspeitos
+  const limite = 160;
   setInterval(() => {
-    if(
+    const devtoolsAberto =
       window.outerWidth - window.innerWidth > limite ||
-      window.outerHeight - window.innerHeight > limite
-    ){
-      // Exibe um overlay de aviso, sem apagar a página
-      if(!document.getElementById("devtools-warning")){
-        const div = document.createElement("div");
-        div.id = "devtools-warning";
-        div.style.position = "fixed";
-        div.style.top = "0";
-        div.style.left = "0";
-        div.style.width = "100%";
-        div.style.height = "100vh";
-        div.style.backgroundColor = "rgba(0,0,0,0.9)";
-        div.style.color = "red";
-        div.style.display = "flex";
-        div.style.alignItems = "center";
-        div.style.justifyContent = "center";
-        div.style.fontSize = "22px";
-        div.style.zIndex = "9999";
-        div.style.textAlign = "center";
-        div.innerHTML = "🚫 Acesso suspeito detectado – DevTools aberto";
-        document.body.appendChild(div);
-      }
-    } else {
-      // Remove overlay se DevTools fechado
-      const warn = document.getElementById("devtools-warning");
-      if(warn) warn.remove();
-    }
-  }, 500);
+      window.outerHeight - window.innerHeight > limite;
+
+    if (devtoolsAberto) bloquearTela();
+  }, 400);
 })();
 
-// Atualiza o ano automaticamente
-document.getElementById("year").textContent = new Date().getFullYear();
+// 🧠 Detectar DevTools pelo console
+(function(){
+  const detect = new Image();
+  Object.defineProperty(detect, "id", {
+    get: function () {
+      bloquearTela();
+    }
+  });
+  setInterval(() => {
+    console.clear();
+    console.log(detect);
+  }, 800);
+})();
+
+// 🛑 Função de bloqueio total
+function bloquearTela(){
+  if (document.getElementById("bloqueio-total")) return;
+
+  document.body.innerHTML = "";
+  document.body.style.margin = "0";
+
+  const tela = document.createElement("div");
+  tela.id = "bloqueio-total";
+  tela.style.cssText = `
+    position:fixed;
+    inset:0;
+    background:#000;
+    color:#ff0000;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:22px;
+    font-family:Arial, sans-serif;
+    z-index:999999;
+    text-align:center;
+  `;
+
+  tela.innerHTML = `
+    🚫 Acesso bloqueado<br><br>
+    Ferramentas de desenvolvedor detectadas
+  `;
+
+  document.body.appendChild(tela);
+
+  // Loop anti-debug
+  setInterval(() => {
+    debugger;
+  }, 100);
+}
+
+// 🔄 Atualiza o ano (mantém seu footer funcionando)
+const year = document.getElementById("year");
+if (year) year.textContent = new Date().getFullYear();
 </script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
