--- a/index.html
+++ b/index.html
@@ -305,53 +305,54 @@ document.addEventListener("keydown", function(e){
 document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 <script>
-/* =========================
-   🔒 PROTEÇÃO AVANÇADA
-========================= */
+// Detectar mobile
+const isMobile = /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
 
-// ❌ Clique direito
-document.addEventListener("contextmenu", e => e.preventDefault());
+if (!isMobile) {
+  // ❌ Clique direito
+  document.addEventListener("contextmenu", e => e.preventDefault());
 
-// ❌ Arrastar elementos/imagens
-document.addEventListener("dragstart", e => e.preventDefault());
+  // ❌ Arrastar elementos/imagens
+  document.addEventListener("dragstart", e => e.preventDefault());
 
-// ❌ Atalhos comuns de DevTools
-document.addEventListener("keydown", function(e){
-  if (
-    e.key === "F12" ||
-    (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) ||
-    (e.ctrlKey && e.key.toLowerCase() === "u")
-  ) {
-    e.preventDefault();
-    e.stopPropagation();
-  }
-});
-
-// 🔍 Detectar DevTools por dimensão
-(function(){
-  const limite = 160;
-  setInterval(() => {
-    const devtoolsAberto =
-      window.outerWidth - window.innerWidth > limite ||
-      window.outerHeight - window.innerHeight > limite;
-
-    if (devtoolsAberto) bloquearTela();
-  }, 400);
-})();
-
-// 🧠 Detectar DevTools pelo console
-(function(){
-  const detect = new Image();
-  Object.defineProperty(detect, "id", {
-    get: function () {
-      bloquearTela();
+  // ❌ Atalhos comuns de DevTools
+  document.addEventListener("keydown", function(e){
+    if (
+      e.key === "F12" ||
+      (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) ||
+      (e.ctrlKey && e.key.toLowerCase() === "u")
+    ) {
+      e.preventDefault();
+      e.stopPropagation();
     }
   });
-  setInterval(() => {
-    console.clear();
-    console.log(detect);
-  }, 800);
-})();
+
+  // 🔍 Detectar DevTools por dimensão
+  (function(){
+    const limite = 160;
+    setInterval(() => {
+      const devtoolsAberto =
+        window.outerWidth - window.innerWidth > limite ||
+        window.outerHeight - window.innerHeight > limite;
+
+      if (devtoolsAberto) bloquearTela();
+    }, 400);
+  })();
+
+  // 🧠 Detectar DevTools pelo console
+  (function(){
+    const detect = new Image();
+    Object.defineProperty(detect, "id", {
+      get: function () {
+        bloquearTela();
+      }
+    });
+    setInterval(() => {
+      console.clear();
+      console.log(detect);
+    }, 800);
+  })();
+}
 
 // 🛑 Função de bloqueio total
 function bloquearTela(){
@@ -394,9 +395,11 @@ const year = document.getElementById("year");
 if (year) year.textContent = new Date().getFullYear();
 </script>
 
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
