--- a/index.html
+++ b/index.html
@@ -270,79 +270,6 @@ footer{
 © <span id="year"></span> Deboxe Customs — Todos os direitos reservados
 </footer>
 <script>
-(()=>{
-
-/* ========= CONFIG ========= */
-const MOBILE=/Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
-const LIMITE=160;
-
-/* ========= BLOQUEIO TOTAL ========= */
-function kill(){
-  if(document.__dead)return;
-  document.__dead=true;
-
-  try{
-    document.head&&document.head.remove();
-    document.body&&document.body.remove();
-    document.documentElement.innerHTML="";
-  }catch(e){}
-
-  const o=document.createElement("div");
-  o.id="x";
-  o.style.cssText="position:fixed;inset:0;background:#000;color:#f00;display:flex;align-items:center;justify-content:center;font:22px Arial;z-index:999999;text-align:center";
-  o.innerHTML="🚫 ACESSO BLOQUEADO<br><br>DevTools detectado";
-
-  document.documentElement.appendChild(o);
-
-  // Anti-remoção
-  new MutationObserver(()=>{
-    if(!document.getElementById("x")){
-      document.documentElement.appendChild(o);
-    }
-  }).observe(document.documentElement,{childList:true});
-
-  // Anti-debug hard
-  setInterval(()=>{
-    debugger;
-    document.documentElement.innerHTML="";
-    document.documentElement.appendChild(o);
-  },80);
-}
-
-/* ========= DETECÇÕES ========= */
-if(!MOBILE){
-
-  // Teclas
-  document.addEventListener("keydown",e=>{
-    if(
-      e.key==="F12"||
-      (e.ctrlKey&&e.shiftKey&&"IJC".includes(e.key.toUpperCase()))||
-      (e.ctrlKey&&e.key.toLowerCase()==="u")
-    ){e.preventDefault();kill();}
-  });
-
-  // Mouse
-  document.addEventListener("contextmenu",e=>e.preventDefault());
-  document.addEventListener("dragstart",e=>e.preventDefault());
-
-  // Dimensão
-  setInterval(()=>{
-    if(
-      window.outerWidth-window.innerWidth>LIMITE||
-      window.outerHeight-window.innerHeight>LIMITE
-    )kill();
-  },300);
-
-  // Console
-  const i=new Image();
-  Object.defineProperty(i,"id",{get:()=>kill()});
-  setInterval(()=>{
-    console.clear();
-    console.log(i);
-  },600);
-}
-
-/* ========= CONSTRUÇÃO DINÂMICA ========= */
 function build(){
   if(document.__dead)return;
 
@@ -363,13 +290,88 @@ function build(){
 
 /* Delay proposital */
 setTimeout(build,200);
+</script>
+<script>
+(()=>{
+/* ========= CONFIG ========= */
+const MOBILE=/Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+const LIMITE=160;
 
+/* ========= BLOQUEIO TOTAL ========= */
+function kill(){
+  if(document.__dead)return;
+  document.__dead=true;
+
+  try{
+    document.head && document.head.remove();
+    document.body && document.body.remove();
+    document.documentElement.innerHTML="";
+  }catch(e){}
+
+  const o=document.createElement("div");
+  o.id="x";
+  o.style.cssText="position:fixed;inset:0;background:#000;color:#f00;display:flex;align-items:center;justify-content:center;font:22px Arial;z-index:999999;text-align:center";
+  o.innerHTML="🚫 ACESSO BLOQUEADO<br><br>Ferramentas de desenvolvedor detectadas";
+
+  document.documentElement.appendChild(o);
+
+  // Anti-remoção
+  new MutationObserver(()=>{
+    if(!document.getElementById("x")){
+      document.documentElement.appendChild(o);
+    }
+  }).observe(document.documentElement,{childList:true});
+
+  // Anti-debug pesado
+  setInterval(()=>{
+    debugger;
+    document.documentElement.innerHTML="";
+    document.documentElement.appendChild(o);
+  },80);
+}
+
+/* ========= DETECÇÕES ========= */
+if(!MOBILE){
+
+  // Teclas
+  document.addEventListener("keydown",e=>{
+    if(
+      e.key==="F12"||
+      (e.ctrlKey&&e.shiftKey&&"IJC".includes(e.key.toUpperCase()))||
+      (e.ctrlKey&&e.key.toLowerCase()==="u")
+    ){
+      e.preventDefault();
+      kill();
+    }
+  });
+
+  // Mouse
+  document.addEventListener("contextmenu",e=>e.preventDefault());
+  document.addEventListener("dragstart",e=>e.preventDefault());
+
+  // Dimensão DevTools
+  setInterval(()=>{
+    if(
+      window.outerWidth-window.innerWidth>LIMITE||
+      window.outerHeight-window.innerHeight>LIMITE
+    ) kill();
+  },300);
+
+  // Console
+  const i=new Image();
+  Object.defineProperty(i,"id",{get:()=>kill()});
+  setInterval(()=>{
+    console.clear();
+    console.log(i);
+  },600);
+}
 })();
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
